fix width scrollbar

--- a/frontend/web/less/desktop/landing.less
+++ b/frontend/web/less/desktop/landing.less
@@ -4,7 +4,7 @@
         margin-right: 0;
       }
       .mCSB_scrollTools{
-        width: 5px;
+        width: 3px;
       }
   }
   .navbar-inverse{
